depuracion imagenes webp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <!-- ENLACE A FAVICON -->
   <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
   <!-- ENLACE A BOOTSTRAP -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- ENLACE A ESTILOS -->
   <link rel="stylesheet" href="css/styles.css">
   <!-- TITULO DEL SITIO WEB -->
@@ -28,18 +29,19 @@
   <input type="checkbox" id="toggleMode">
   <label for="toggleMode" class="toggleDark" title="Cambiar a modo claro"><i class="fas fa-sun"></i></label>
   <label for="toggleMode" class="toggleLight" title="Cambiar a modo oscuro"><i class="fas fa-moon"></i></label>
- <!-- HEADER -->
-<header>
-      <!-- MENU NAVEGACION BOOTSTRAP -->
+  <!-- HEADER -->
+  <header>
+    <!-- MENU NAVEGACION BOOTSTRAP -->
     <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
-      <div class="container-fluid">        
+      <div class="container-fluid">
         <a class="navbar-brand logo" href="#">MusicArte</a>
         <label class="navbar-brand logo-2"><a href="#">♪</a></label>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars" ></i>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div  class="navbar-nav ms-auto">
+          <div class="navbar-nav ms-auto">
             <a class="nav-link rounded-3" aria-current="page" href="#">Inicio</a>
             <a class="nav-link rounded-3" href="pages/piano.html">Piano</a>
             <a class="nav-link rounded-3" href="pages/canto.html">Canto</a>
@@ -55,159 +57,166 @@
   </header>
 
   <!-- MAIN PRINCIPAL -->
-<main id="index">
-  <div class="main">
-          <!-- SECCION TOP -->
-          <div class="section-top">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="assets/img/index/top1.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/index/top2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/index/top3.jpg" class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
+  <main id="index">
+    <div class="main">
+      <!-- SECCION TOP -->
+      <div class="section-top">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/img/index/top1.webp" class="d-block w-100" alt="...">
             </div>
-            <!-- FIN SECCION TOP -->
+            <div class="carousel-item">
+              <img src="assets/img/index/top2.webp" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/img/index/top3.webp" class="d-block w-100" alt="...">
+            </div>
           </div>
-
-    <!-- SECCION 1 -->
-    <section class="section1">
-      <h1>Descubre la <strong>música</strong></h1>
-      <p>
-        En <strong>MusicArte</strong> nos comprometemos con la
-        <em>calidad de la enseñanza</em> con
-        <strong>músicos profesionales</strong> apasionados y con experiencia.
-      </p>
-    </section>
-    <!-- FIN SECCION 1 -->
-
-    <!-- SECCION 2 -->
-    <section class="section2">
-      <div class="divisor">
-        <div class="divisor-imagen">
-        <img src="assets/img/index/j2.jpg" alt="madre e hijo practicando violin">
-        <img src="assets/img/index/j3.png" alt="niña practicando piano">
-      </div>
-        <div class="divisor-texto">
-          <h3>Adultos/Niños</h3>
-          <p>
-            Nuestros programas están diseñados para
-            <em>todas las edades y niveles.</em>
-          </p>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
+        <!-- FIN SECCION TOP -->
       </div>
-      <div class="divisor">
-        <div class="divisor-imagen">
-        <img src="assets/img/index/i2.png" alt="padre e hija practicando canto">
-        <img src="assets/img/index/i3.jpg" alt="padre e hijo practicando piano">
-      </div>
-        <div class="divisor-texto">
-          <h3>Instrumentos</h3>
-          <p>
-            Elige nuestras <strong>clases</strong> de <em>piano</em>,
-            <em>canto</em> o <em>violín</em> y desarrolla tu pasión musical.
-          </p>
-        </div>
-      </div>
-    </section>
-    <!-- FIN SECCION 2 -->
-    
-    <!-- SECCION 3 -->
-    <section class="section3">
-      <div class="divisor1">
-        <h2>Profesores Calificados</h2>
+
+      <!-- SECCION 1 -->
+      <section class="section1">
+        <h1>Descubre la <strong>música</strong></h1>
         <p>
-          Nuestro equipo de docentes está formado por
-          <strong>músicos profesionales</strong>
-          comprometidos a ayudarte a alcanzar tus metas.
+          En <strong>MusicArte</strong> nos comprometemos con la
+          <em>calidad de la enseñanza</em> con
+          <strong>músicos profesionales</strong> apasionados y con experiencia.
         </p>
-      </div>
-      <div class="divisor2 container max-width-xxl">
-        <div class="row">
-          <div class="card col-lg-4 col-sm-12">
-            <div class="card">
-              <div class="row">
-                <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                  <h3 class="card-title text-center">Piano<br>Elena Martínez</h3>
-                </div>
-                <div class="col-lg-12 col-sm-6">
-                  <img class="card-img-top mb-3" src="assets/img/profesores/s1.jpg" alt="Card image cap profesora de piano">
-                </div>
-                <div class="col-lg-12 col-sm-12 mb-3">
-                  <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
-                    estudiantes desde los primeros acordes hasta las
-                    melodías más complejas, inspirando el talento de cada alumno, cultivando una conexión única
-                    entre el pianista y su instrumento.</p>
+      </section>
+      <!-- FIN SECCION 1 -->
+
+      <!-- SECCION 2 -->
+      <section class="section2">
+        <div class="divisor">
+          <div class="divisor-imagen">
+            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin">
+            <img src="assets/img/index/j3.webp" alt="niña practicando piano">
+          </div>
+          <div class="divisor-texto">
+            <h3>Adultos/Niños</h3>
+            <p>
+              Nuestros programas están diseñados para
+              <em>todas las edades y niveles.</em>
+            </p>
+          </div>
+        </div>
+        <div class="divisor">
+          <div class="divisor-imagen">
+            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto">
+            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano">
+          </div>
+          <div class="divisor-texto">
+            <h3>Instrumentos</h3>
+            <p>
+              Elige nuestras <strong>clases</strong> de <em>piano</em>,
+              <em>canto</em> o <em>violín</em> y desarrolla tu pasión musical.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- FIN SECCION 2 -->
+
+      <!-- SECCION 3 -->
+      <section class="section3">
+        <div class="divisor1">
+          <h2>Profesores Calificados</h2>
+          <p>
+            Nuestro equipo de docentes está formado por
+            <strong>músicos profesionales</strong>
+            comprometidos a ayudarte a alcanzar tus metas.
+          </p>
+        </div>
+        <div class="divisor2 container max-width-xxl">
+          <div class="row">
+            <div class="card col-lg-4 col-sm-12">
+              <div class="card">
+                <div class="row">
+                  <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                    <h3 class="card-title text-center">Piano<br>Elena Martínez</h3>
+                  </div>
+                  <div class="col-lg-12 col-sm-6">
+                    <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
+                      alt="Card image cap profesora de piano">
+                  </div>
+                  <div class="col-lg-12 col-sm-12 mb-3">
+                    <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
+                      estudiantes desde los primeros acordes hasta las
+                      melodías más complejas, inspirando el talento de cada alumno, cultivando una conexión única
+                      entre el pianista y su instrumento.</p>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card col-lg-4 col-sm-12">
-            <div class="card">
-              <div class="row">
-                <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                  <h3 class="card-title text-center">Canto<br>Laura Rivarola</h3>
+            <div class="card col-lg-4 col-sm-12">
+              <div class="card">
+                <div class="row">
+                  <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                    <h3 class="card-title text-center">Canto<br>Laura Rivarola</h3>
+                  </div>
+                  <div class="col-lg-12 col-sm-6">
+                    <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
+                      alt="Card image cap profesora de violin">
+                  </div>
+                  <div class="col-lg-12 col-sm-12 mb-3">
+                    <p class="card-text">Con su calidez y experiencia, ayuda a sus estudiantes a descubrir todo
+                      su potencial
+                      vocal. Desde técnicas de respiración hasta la interpretación emocional, creando un espacio donde
+                      la música y la expresión se encuentran en perfecta armonía.</p>
+                  </div>
                 </div>
-                <div class="col-lg-12 col-sm-6">
-                  <img class="card-img-top mb-3" src="assets/img/profesores/s2.jpg" alt="Card image cap profesora de violin">
-                </div>
-                <div class="col-lg-12 col-sm-12 mb-3">
-                <p class="card-text">Con su calidez y experiencia, ayuda a sus estudiantes a descubrir todo
-                  su potencial
-                  vocal. Desde técnicas de respiración hasta la interpretación emocional, creando un espacio donde la música y la expresión se encuentran en perfecta armonía.</p>
-                </div>
-                </div>
+              </div>
             </div>
-          </div>
-          <div class="card col-lg-4 col-sm-12">
-            <div class="card">
-              <div class="row">
-                <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                  <h3 class="card-title text-center">Violín<br>Analía Villalba</h3>
+            <div class="card col-lg-4 col-sm-12">
+              <div class="card">
+                <div class="row">
+                  <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                    <h3 class="card-title text-center">Violín<br>Analía Villalba</h3>
+                  </div>
+                  <div class="col-lg-12 col-sm-6">
+                    <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
+                      alt="Card image cap profesora de canto">
+                  </div>
+                  <div class="col-lg-12 col-sm-12 mb-3">
+                    <p class="card-text">Con su gracia y amabilidad, despierta la pasión por la música en sus
+                      alumnos. Desde los primeros pasos hasta las interpretaciones más emotivas, guiándolos con
+                      paciencia y
+                      experiencia, creando un ambiente de aprendizaje inspirador.</p>
+                  </div>
                 </div>
-                <div class="col-lg-12 col-sm-6">
-                  <img class="card-img-top mb-3" src="assets/img/profesores/s3.jpg" alt="Card image cap profesora de canto">
-                </div>
-                <div class="col-lg-12 col-sm-12 mb-3">
-                <p class="card-text">Con su gracia y amabilidad, despierta la pasión por la música en sus
-                  alumnos. Desde los primeros pasos hasta las interpretaciones más emotivas, guiándolos con paciencia y
-                  experiencia, creando un ambiente de aprendizaje inspirador.</p>
-                </div>
-                </div>
+              </div>
             </div>
+
           </div>
-      
         </div>
-      </div>
 
-      <div class="divisor3">
-        <h2>¿Dónde puedes encontrarnos?</h2>
-        <p>Estamos en el barrio de Caballito.</p>
-        <p>Ciudad Autónoma de Buenos Aires, Argentina.</p>
-        <iframe class="mapa"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.913095587718!2d-58.45755171581829!3d-34.60635898788403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca056bf8ac4d%3A0x6458e26e352af8c2!2sCucha%20Cucha%201410%2C%20C1416%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1713388097983!5m2!1ses!2sar"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <!-- FIN SECCION 3 -->
-    </section>
+        <div class="divisor3">
+          <h2>¿Dónde puedes encontrarnos?</h2>
+          <p>Estamos en el barrio de Caballito.</p>
+          <p>Ciudad Autónoma de Buenos Aires, Argentina.</p>
+          <iframe class="mapa"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.913095587718!2d-58.45755171581829!3d-34.60635898788403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca056bf8ac4d%3A0x6458e26e352af8c2!2sCucha%20Cucha%201410%2C%20C1416%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1713388097983!5m2!1ses!2sar"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <!-- FIN SECCION 3 -->
+      </section>
 
-    <!-- FIN MAIN PRINCIPAL -->
-  </div>
-</main>
+      <!-- FIN MAIN PRINCIPAL -->
+    </div>
+  </main>
 
   <!-- FOOTER -->
   <footer>
@@ -232,9 +241,12 @@
     <!-- FIN FOOTER -->
   </footer>
   <!-- SCRIPT DE BOOTSTRAP -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <!-- FIN BODY -->
 </body>
 
 <!-- FIN HTML -->
+
 </html>
