--- a/pages/canto.html
+++ b/pages/canto.html
@@ -66,7 +66,7 @@
             y progreso.
           </p>
           <div class="imagen1">
-            <img src="../assets/img/canto/1.jpg" alt="imagen de cantante">
+            <img src="../assets/img/canto/1.webp" alt="imagen de cantante">
           </div>
         </section>
         <section class="section2">
@@ -75,7 +75,7 @@
             Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
           </p>
           <div class="imagen2">
-            <img src="../assets/img/canto/2.jpg" alt="adultos y niños cantando">
+            <img src="../assets/img/canto/2.webp" alt="adultos y niños cantando">
           </div>
         </section>
         <section class="section3">
@@ -84,7 +84,7 @@
             Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
           </p>
           <div class="imagen3">
-            <img src="../assets/img/canto/3.jpg" alt="cantante global">
+            <img src="../assets/img/canto/3.webp" alt="cantante global">
           </div>
         </section>
       </div>
@@ -97,7 +97,7 @@
             Te estamos esperando.<br><em>Toma tu primera clase.</em>
           </p>
           <div class="imagen3">
-          <img src="../assets/img/profesores/s2.jpg" alt="profesora de canto">
+          <img src="../assets/img/profesores/s2.webp" alt="profesora de canto">
           </div>
         </section>
       </div>
