--- a/pages/piano.html
+++ b/pages/piano.html
@@ -66,7 +66,7 @@
           y progreso.
         </p>
         <div class="imagen1">
-          <img src="../assets/img/piano/1.jpg" alt="teclas de piano">
+          <img src="../assets/img/piano/1.webp" alt="teclas de piano">
         </div>
       </section>
       <section class="section2">
@@ -75,7 +75,7 @@
           Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
         </p>
         <div class="imagen2">
-          <img src="../assets/img/piano/2.jpg" alt="adultos y niños tocando piano">
+          <img src="../assets/img/piano/2.webp" alt="adultos y niños tocando piano">
         </div>
       </section>
       <section class="section3">
@@ -84,7 +84,7 @@
           Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
         </p>
         <div class="imagen3">
-          <img src="../assets/img/piano/3.jpg" alt="pianista global">
+          <img src="../assets/img/piano/3.webp" alt="pianista global">
         </div>
       </section>
 
@@ -97,7 +97,7 @@
           Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </p>
         <div class="imagen3">
-        <img src="../assets/img/profesores/s1.jpg" alt="profesora de piano">
+        <img src="../assets/img/profesores/s1.webp" alt="profesora de piano">
         </div>
       </section>
     </div>
