--- a/pages/violin.html
+++ b/pages/violin.html
@@ -66,7 +66,7 @@
           y progreso.
         </p>
         <div class="imagen1">
-          <img src="../assets/img/violin/1.jpg" alt="imagen de violín">
+          <img src="../assets/img/violin/1.webp" alt="imagen de violín">
         </div>
       </section>
       <section class="section2">
@@ -75,7 +75,7 @@
           Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
         </p>
         <div class="imagen2">
-          <img src="../assets/img/violin/2.jpg" alt="adultos y niños tocando violín">
+          <img src="../assets/img/violin/2.webp" alt="adultos y niños tocando violín">
         </div>
       </section>
       <section class="section3">
@@ -84,7 +84,7 @@
           Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
         </p>
         <div class="imagen2">
-          <img src="../assets/img/violin/3.jpg" alt="violinista global">
+          <img src="../assets/img/violin/3.webp" alt="violinista global">
         </div>
       </section>
 
@@ -97,7 +97,7 @@
           Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </p>
         <div class="imagen3">
-        <img src="../assets/img/profesores/s3.jpg" alt="profesora de violín">
+        <img src="../assets/img/profesores/s3.webp" alt="profesora de violín">
         </div>
       </section>
     </div>
