aplicacion scale y links en index a #musica

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <h3 class="card-title text-center">Piano<br>Elena Martínez</h3>
+                    <a href="pages/piano.html" class="link">Piano Elena Martínez</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
@@ -164,7 +164,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <h3 class="card-title text-center">Canto<br>Laura Rivarola</h3>
+                   <a href="pages/canto.html" class="link">Canto Laura Rivarola</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
@@ -183,7 +183,7 @@
               <div class="card">
                 <div class="row">
                   <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
-                    <h3 class="card-title text-center">Violín<br>Analía Villalba</h3>
+                    <a href="pages/violin.html" class="link">Violín Analía Villalba</a>
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
