--- a/pages/piano.html
+++ b/pages/piano.html
@@ -62,13 +62,13 @@
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/img/index/top1.webp" class="d-block w-100" alt="...">
+            <img src="../assets/img/index/top1.webp" class="d-block w-100" alt="imagen artística de un violin sobre una partitura con una flor">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/index/top2.webp" class="d-block w-100" alt="...">
+            <img src="../assets/img/index/top2.webp" class="d-block w-100" alt="imagen artística de las teclas de un piano">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/index/top3.webp" class="d-block w-100" alt="...">
+            <img src="../assets/img/index/top3.webp" class="d-block w-100" alt="imagen artística de dos micrófonos apoyados en el suelo">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
