animacion en formulario contacto.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,13 +58,13 @@
     <main class="contacto">
       <div class="contenedor">
       <!-- SECCION 1 -->
-      <section class="section1">
+      <section class="section1 fade-in-image">
         <h1>Aprende<br>con nosotros</h1>
         <!-- FIN SECCION 1 -->
       </section>
 
       <!-- SECCION 2 -->
-      <section class="section2">
+      <section class="section2 fade-in-image">
         <div>
           <h2>Reserva tu Clase</h2>
           <p>
@@ -76,7 +76,7 @@
       <!-- FIN SECCION 2 -->
 
       <!-- SECCION 3 -->
-      <div class="section3">
+      <div class="section3 fade-in-image">
         <form action="/enviar.php" method="POST">
           <label for="name">Nombre</label>
           <input
