animacion fade en todas las paginas

--- a/pages/canto.html
+++ b/pages/canto.html
@@ -86,7 +86,7 @@
     </div>
       <!-- DIVISOR 1 -->
       <div class="divisor-1">
-        <section class="section1">
+        <section class="section1 fade-in-image">
           <h1>Aprende<br>Canto</h1>
           <p>
             Nuestras clases son <em>personalizadas e individuales</em>, garantizando mayor atención
@@ -96,7 +96,7 @@
             <img src="../assets/img/canto/1.webp" alt="imagen de cantante">
           </div>
         </section>
-        <section class="section2">
+        <section class="section2 fade-in-image">
           <h3>Adultos<br>Niños</h3>
           <p>
             Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
@@ -105,7 +105,7 @@
             <img src="../assets/img/canto/2.webp" alt="adultos y niños cantando">
           </div>
         </section>
-        <section class="section3">
+        <section class="section3 fade-in-image">
           <h3>Únete<br>a<br>nosotros</h3>
           <p>
             Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
