animacion fade actualizacion

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
 
       <!-- SECCION 1 -->
-      <section class="section1 fade-in-image">
+      <section class="section1 fade-in">
         <h1>Descubre la <strong>música</strong></h1>
         <p>
           En <strong>MusicArte</strong> nos comprometemos con la
@@ -99,7 +99,7 @@
       <!-- FIN SECCION 1 -->
 
       <!-- SECCION 2 -->
-      <section class="section2 fade-in-image">
+      <section class="section2 fade-in">
         <div class="divisor">
           <div class="divisor-imagen">
             <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin">
@@ -130,7 +130,7 @@
       <!-- FIN SECCION 2 -->
 
       <!-- SECCION 3 -->
-      <section class="section3 fade-in-image">
+      <section class="section3 fade-in">
         <div class="divisor1">
           <h2>Profesores Calificados</h2>
           <p>
