--- a/pages/canto.html
+++ b/pages/canto.html
@@ -86,18 +86,18 @@
     </div>
       <!-- DIVISOR 1 -->
       <div class="divisor-1">
-        <section class="section1 fade-in-image">
-          <h1>Aprende<br>Canto</h1>
-          <p>
+        <section class="section1">
+          <h1 class="fade-in fade1">Aprende<br>Canto</h1>
+          <p class="fade-in fade2">
             Nuestras clases son <em>personalizadas e individuales</em>, garantizando mayor atención
             y progreso.
           </p>
           <div class="imagen1">
-            <img src="../assets/img/canto/1.webp" alt="imagen de cantante">
+            <img src="../assets/img/canto/1.webp" alt="imagen de cantante" class="fade-in fade3">
           </div>
         </section>
-        <section class="section2 fade-in-image">
-          <h3>Adultos<br>Niños</h3>
+        <section class="section2 fade-in">
+          <h2>Adultos<br>Niños</h2>
           <p>
             Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
           </p>
@@ -105,7 +105,7 @@
             <img src="../assets/img/canto/2.webp" alt="adultos y niños cantando">
           </div>
         </section>
-        <section class="section3 fade-in-image">
+        <section class="section3 fade-in">
           <h3>Únete<br>a<br>nosotros</h3>
           <p>
             Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
