correccion link a toogle.js

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <!-- SCRIPT A TOOGLE -->
-  <script src="../assets/js/toogle.js"></script>
+  <script src="assets/js/toogle.js"></script>
   <!-- FIN BODY -->
 </body>
 
