mejoras recomendadas por PageSpeed Insights

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -161,16 +161,16 @@
       <div id="redes">
         <ul>
           <li>
-            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" target="_blank" aria-label="Abrir enlace a Facebook"><i class="fab fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="#" target="_blank" aria-label="Abrir enlace a Youtube"><i class="fab fa-youtube"></i></a>
           </li>
           <li>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank" aria-label="Abrir enlace a Instagram"><i class="fab fa-instagram"></i></a>
           </li>
           <li>
-            <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="#" target="_blank" aria-label="Abrir enlace a Linkedin"><i class="fab fa-linkedin"></i></a>
           </li>
         </ul>
       </div>
