--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <img src="assets/img/index/j3.webp" alt="niña practicando piano">
           </div>
           <div class="divisor-texto">
-            <h3>Adultos/Niños</h3>
+            <h2>Adultos/Niños</h2>
             <p>
               Nuestros programas están diseñados para
               <em>todas las edades y niveles.</em>
@@ -119,7 +119,7 @@
             <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano">
           </div>
           <div class="divisor-texto">
-            <h3>Instrumentos</h3>
+            <h2>Instrumentos</h2>
             <p>
               Elige nuestras <strong>clases</strong> de <em>piano</em>,
               <em>canto</em> o <em>violín</em> y desarrolla tu pasión musical.
@@ -203,13 +203,13 @@
         </div>
 
         <div class="divisor3">
-          <h2>¿Dónde puedes encontrarnos?</h2>
+          <h3>¿Dónde puedes encontrarnos?</h3>
           <p>Estamos en el barrio de Caballito.</p>
           <p>Ciudad Autónoma de Buenos Aires, Argentina.</p>
           <iframe class="mapa"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.913095587718!2d-58.45755171581829!3d-34.60635898788403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca056bf8ac4d%3A0x6458e26e352af8c2!2sCucha%20Cucha%201410%2C%20C1416%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1713388097983!5m2!1ses!2sar"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade" title="mapa de google"></iframe>
         </div>
         <!-- FIN SECCION 3 -->
       </section>
@@ -224,16 +224,16 @@
     <div id="redes">
       <ul>
         <li>
-          <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" target="_blank" aria-label="Abrir enlace a Facebook"><i class="fab fa-facebook-f"></i></a>
         </li>
         <li>
-          <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="#" target="_blank" aria-label="Abrir enlace a Youtube"><i class="fab fa-youtube"></i></a>
         </li>
         <li>
-          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="#" target="_blank" aria-label="Abrir enlace a Instagram"><i class="fab fa-instagram"></i></a>
         </li>
         <li>
-          <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="#" target="_blank" aria-label="Abrir enlace a Linkedin"><i class="fab fa-linkedin"></i></a>
         </li>
       </ul>
     </div>
