actualizacion de textos p

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -59,7 +59,7 @@
       <div class="contenedor">
       <!-- SECCION 1 -->
       <section class="section1 fade-in">
-        <h1>Aprende<br>con nosotros</h1>
+        <h1>Aprendamos juntos</h1>
         <!-- FIN SECCION 1 -->
       </section>
 
@@ -68,8 +68,10 @@
         <div>
           <h2>Reserva tu Clase</h2>
           <p>
-            ¿Listo para comenzar?<br>Estamos aquí para
-            ayudarte a alcanzar tus <em>metas musicales</em>.<br>¡Te estamos esperando!
+            ¿Listo para comenzar?</p>
+            <p>Estamos aquí para
+            ayudarte a alcanzar tus <em>metas musicales</em>.</p>
+            <p>¡Te estamos esperando!
           </p>
         </div>
       </section>
