reemplazo iconos fontawesome por icon-sets. Retomo fuente texto de googlefont

--- a/pages/canto.html
+++ b/pages/canto.html
@@ -26,18 +26,19 @@
 <body>
   <!-- MODO CLARO/OSCURO -->
   <input type="checkbox" id="toggleMode">
-  <label for="toggleMode" class="toggleDark" title="Cambiar a modo claro"><i class="fas fa-sun"></i></label>
-  <label for="toggleMode" class="toggleLight" title="Cambiar a modo oscuro"><i class="fas fa-moon"></i></label>
- <!-- HEADER -->
+  <label for="toggleMode" class="toggleDark" title="Cambiar a modo claro"><svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" viewBox="0 0 16 16"><path fill="currentColor" d="M8 12a4 4 0 1 0 0-8a4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708"/></svg></label>
+  <label for="toggleMode" class="toggleLight" title="Cambiar a modo oscuro"><svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" viewBox="0 0 24 24"><path fill="currentColor" d="M12 22c5.523 0 10-4.477 10-10c0-.463-.694-.54-.933-.143a6.5 6.5 0 1 1-8.924-8.924C12.54 2.693 12.463 2 12 2C6.477 2 2 6.477 2 12s4.477 10 10 10"/></svg></label>
+  <!-- HEADER -->
 <header>
       <!-- MENU NAVEGACION BOOTSTRAP -->
     <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand logo" href="../index.html">MusicArte</a>
         <label class="navbar-brand logo-2"><a href="../index.html">♪</a></label>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars" ></i>
-        </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <svg xmlns="http://www.w3.org/2000/svg" width="2.2rem" height="2.2rem" viewBox="0 0 20 20"><path fill="currentColor" fill-rule="evenodd" d="M3 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1m0 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1m0 5a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1" clip-rule="evenodd"/></svg>
+      </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div  class="navbar-nav ms-auto">
             <a class="nav-link rounded-3" href="../index.html">Inicio</a>
@@ -132,25 +133,25 @@
       <!-- FIN MAIN PRINCIPAL -->
     </main>
 
-    <!-- FOOTER -->
-    <footer>
-      <h4 id="copyright">&copy; 2024 <strong>MusicArte</strong></h4>
-      <div id="redes">
-        <ul>
-          <li>
-            <a href="#" target="_blank" aria-label="Abrir enlace a Facebook"><i class="fab fa-facebook-f"></i></a>
-          </li>
-          <li>
-            <a href="#" target="_blank" aria-label="Abrir enlace a Youtube"><i class="fab fa-youtube"></i></a>
-          </li>
-          <li>
-            <a href="#" target="_blank" aria-label="Abrir enlace a Instagram"><i class="fab fa-instagram"></i></a>
-          </li>
-          <li>
-            <a href="#" target="_blank" aria-label="Abrir enlace a Linkedin"><i class="fab fa-linkedin"></i></a>
-          </li>
-        </ul>
-      </div>
+  <!-- FOOTER -->
+  <footer>
+    <h4 id="copyright">&copy; 2024 <strong>MusicArte</strong></h4>
+    <div id="redes">
+      <ul>
+        <li>
+          <a href="#" target="_blank" aria-label="Abrir enlace a Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" viewBox="0 0 24 24"><path fill="currentColor" d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4z"/></svg></a>
+        </li>
+        <li>
+          <a href="#" target="_blank" aria-label="Abrir enlace a X"><svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" viewBox="0 0 24 24"><path fill="currentColor" d="M18.205 2.25h3.308l-7.227 8.26l8.502 11.24H16.13l-5.214-6.817L4.95 21.75H1.64l7.73-8.835L1.215 2.25H8.04l4.713 6.231zm-1.161 17.52h1.833L7.045 4.126H5.078z"/></svg></a>
+        </li>
+        <li>
+          <a href="#" target="_blank" aria-label="Abrir enlace a Youtube"><svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" viewBox="0 0 24 24"><path fill="currentColor" d="m10 15l5.19-3L10 9zm11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73"/></svg></a>
+        </li>
+        <li>
+          <a href="#" target="_blank" aria-label="Abrir enlace a Linkedin"><svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" viewBox="0 0 24 24"><path fill="currentColor" d="M19.959 11.719v7.379h-4.278v-6.885c0-1.73-.619-2.91-2.167-2.91c-1.182 0-1.886.796-2.195 1.565c-.113.275-.142.658-.142 1.043v7.187h-4.28s.058-11.66 0-12.869h4.28v1.824l-.028.042h.028v-.042c.568-.875 1.583-2.126 3.856-2.126c2.815 0 4.926 1.84 4.926 5.792M2.421.026C.958.026 0 .986 0 2.249c0 1.235.93 2.224 2.365 2.224h.028c1.493 0 2.42-.989 2.42-2.224C4.787.986 3.887.026 2.422.026zM.254 19.098h4.278V6.229H.254z"/></svg></a>
+        </li>
+      </ul>
+    </div>
 
     <!-- FIN FOOTER -->
   </footer>
