--- a/pages/canto.html
+++ b/pages/canto.html
@@ -5,18 +5,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <!-- ENLACE A FAVICON -->
   <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
-  <!-- ENLACE A BOOTSTRAP -->
+  
+  <!-- PRELOAD DE BOOTSTRAP -->
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- PRELOAD DE ESTILOS -->
+  <link rel="preload" href="../css/styles.css" as="style">
+  
+  <!-- ENLACE A BOOTSTRAP Y ESTILOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!-- ENLACE A ESTILOS -->
   <link rel="stylesheet" href="../css/styles.css">
+  
   <!-- TITULO DEL SITIO WEB -->
   <title>MusicArte - Escuela de Música</title>
+  
   <!-- DESCRIPCION DEL SITIO WEB -->
   <meta name="description" content="Escuela de enseñanza de instrumentos musicales">
+  
+  <!-- PRELOAD IMÁGENES -->
+  <link rel="preload" href="../assets/img/index/top1.webp" as="image">
+  <link rel="preload" href="../assets/img/index/top2.webp" as="image">
+  <link rel="preload" href="../assets/img/index/top3.webp" as="image">
 
-  <!-- FIN DE METADATOS -->
+  <!-- FIN METADATOS -->
 </head>
 
 <!-- BODY -->
