--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,11 +12,11 @@
   <!-- PRELOAD DE BOOTSTRAP -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- PRELOAD DE ESTILOS -->
-  <link rel="preload" href="/css/styles.css" as="style">
+  <link rel="preload" href="../css/styles.css" as="style">
   
   <!-- ENLACE A BOOTSTRAP Y ESTILOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
   
   <!-- TITULO DEL SITIO WEB -->
   <title>MusicArte - Escuela de Música</title>
