actualizacion width height

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
       <section class="section2 fade-in">
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin">
-            <img src="assets/img/index/j3.webp" alt="niña practicando piano">
+            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" width="500px" height="500px">
+            <img src="assets/img/index/j3.webp" alt="niña practicando piano" width="500px" height="500px">
           </div>
           <div class="divisor-texto">
             <h2>Adultos/Niños</h2>
@@ -129,8 +129,8 @@
         </div>
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto">
-            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano">
+            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto" width="500px" height="500px">
+            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" width="500px" height="500px">
           </div>
           <div class="divisor-texto">
             <h2>Instrumentos</h2>
