--- a/pages/canto.html
+++ b/pages/canto.html
@@ -108,7 +108,7 @@
             y progreso.
           </p>
           <div class="imagen1">
-            <img src="../assets/img/canto/1.webp" alt="imagen de cantante" class="fade-in fade3">
+            <img src="../assets/img/canto/1.webp" alt="imagen de cantante" class="fade-in fade3" width="600px" height="400px">
           </div>
         </section>
         <section class="section2 fade-in">
@@ -117,7 +117,7 @@
             Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
           </p>
           <div class="imagen2">
-            <img src="../assets/img/canto/2.webp" alt="adultos y niños cantando">
+            <img src="../assets/img/canto/2.webp" alt="adultos y niños cantando" width="501px" height="500px">
           </div>
         </section>
         <section class="section3 fade-in">
@@ -126,7 +126,7 @@
             Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
           </p>
           <div class="imagen3">
-            <img src="../assets/img/canto/3.webp" alt="cantante global">
+            <img src="../assets/img/canto/3.webp" alt="cantante global" width="501px" height="500px">
           </div>
         </section>
       </div>
