--- a/pages/piano.html
+++ b/pages/piano.html
@@ -108,7 +108,7 @@
           y progreso.
         </p>
         <div class="imagen1">
-          <img src="../assets/img/piano/1.webp" alt="teclas de piano" class="fade-in fade3">
+          <img src="../assets/img/piano/1.webp" alt="teclas de piano" class="fade-in fade3" width="600px" height="400px">
         </div>
       </section>
       <section class="section2 fade-in">
@@ -117,7 +117,7 @@
           Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
         </p>
         <div class="imagen2">
-          <img src="../assets/img/piano/2.webp" alt="adultos y niños tocando piano">
+          <img src="../assets/img/piano/2.webp" alt="adultos y niños tocando piano" width="501px" height="500px">
         </div>
       </section>
       <section class="section3 fade-in">
@@ -126,7 +126,7 @@
           Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
         </p>
         <div class="imagen3">
-          <img src="../assets/img/piano/3.webp" alt="pianista global">
+          <img src="../assets/img/piano/3.webp" alt="pianista global" width="501px" height="500px">
         </div>
       </section>
 
