--- a/pages/piano.html
+++ b/pages/piano.html
@@ -139,7 +139,7 @@
           Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </h3>
         <div class="imagen3">
-        <img src="../assets/img/profesores/s1.webp" alt="profesora de piano">
+        <img src="../assets/img/profesores/s1.webp" alt="profesora de piano" width="432px" height="432px">
         </div>
       </section>
     </div>
