--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
       <section class="section2 fade-in">
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" width="500px" height="500px">
-            <img src="assets/img/index/j3.webp" alt="niña practicando piano" width="500px" height="500px">
+            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" width="500px">
+            <img src="assets/img/index/j3.webp" alt="niña practicando piano" height="500px">
           </div>
           <div class="divisor-texto">
             <h2>Adultos/Niños</h2>
