width establecido html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
-                      alt="Card image cap profesora de piano"  height="432px">
+                      alt="Card image cap profesora de piano" width="432px">
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
@@ -201,7 +201,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
-                      alt="Card image cap profesora de canto" width="432px" height="432px">
+                      alt="Card image cap profesora de canto" width="432px">
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su gracia y amabilidad, despierta la pasión por la música en sus
