--- a/pages/canto.html
+++ b/pages/canto.html
@@ -139,7 +139,7 @@
             Te estamos esperando.<br><em>Toma tu primera clase.</em>
           </h3>
           <div class="imagen3">
-          <img src="../assets/img/profesores/s2.webp" alt="profesora de canto" width="432px" height="432px">
+          <img src="../assets/img/profesores/s2.webp" alt="profesora de canto" width="432px">
           </div>
         </section>
       </div>
