--- a/pages/violin.html
+++ b/pages/violin.html
@@ -139,7 +139,7 @@
           Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </h3>
         <div class="imagen3">
-        <img src="../assets/img/profesores/s3.webp" alt="profesora de violín" width="432px" height="432px">
+        <img src="../assets/img/profesores/s3.webp" alt="profesora de violín" width="432px">
         </div>
       </section>
     </div>
