lazyload en iframe mapa goolge

--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
           <h3>¿Dónde puedes encontrarnos?</h3>
           <p>Estamos en el barrio de Caballito.</p>
           <p>Ciudad Autónoma de Buenos Aires, Argentina.</p>
-          <iframe class="mapa"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.913095587718!2d-58.45755171581829!3d-34.60635898788403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca056bf8ac4d%3A0x6458e26e352af8c2!2sCucha%20Cucha%201410%2C%20C1416%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1713388097983!5m2!1ses!2sar"
+          <iframe class="mapa lazy-load-map"
+           data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.913095587718!2d-58.45755171581829!3d-34.60635898788403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca056bf8ac4d%3A0x6458e26e352af8c2!2sCucha%20Cucha%201410%2C%20C1416%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1713388097983!5m2!1ses!2sar"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade" title="mapa de google"></iframe>
         </div>
@@ -261,6 +261,7 @@
   <!-- SCRIPTS JS -->
   <script src="assets/js/toogle.js"></script>
   <script src="assets/js/cookies.js"></script>
+  <script src="assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
 
