actualizacion aniamciones preload loading lazy

--- a/pages/piano.html
+++ b/pages/piano.html
@@ -139,7 +139,7 @@
           Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </h3>
         <div class="imagen3">
-        <img src="../assets/img/profesores/s1.webp" alt="profesora de piano" width="432px">
+        <img src="../assets/img/profesores/s1.webp" alt="profesora de piano" loading="lazy" width="432px">
         </div>
       </section>
     </div>
@@ -174,8 +174,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
-  <script src="../assets/js/toogle.js"></script>
-  <script src="../assets/js/cookies.js"></script>
+  <script src="assets/js/toogle.js"></script>
+  <script src="assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
 
