--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
       <section class="section2 fade-in">
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" height="500px">
-            <img src="assets/img/index/j3.webp" alt="niña practicando piano" height="500px">
+            <img src="assets/img/index/j2.webp" alt="madre e hijo practicando violin" loading="lazy" height="500px">
+            <img src="assets/img/index/j3.webp" alt="niña practicando piano" loading="lazy" height="500px">
           </div>
           <div class="divisor-texto">
             <h2>Adultos/Niños</h2>
@@ -129,8 +129,8 @@
         </div>
         <div class="divisor">
           <div class="divisor-imagen">
-            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto" height="500px">
-            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" height="500px">
+            <img src="assets/img/index/i2.webp" alt="padre e hija practicando canto" loading="lazy" height="500px">
+            <img src="assets/img/index/i3.webp" alt="padre e hijo practicando piano" loading="lazy" height="500px">
           </div>
           <div class="divisor-texto">
             <h2>Instrumentos</h2>
@@ -163,7 +163,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s1.webp"
-                      alt="Card image cap profesora de piano" width="432px">
+                      alt="Card image cap profesora de piano" loading="lazy" width="432px">
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
@@ -182,7 +182,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s2.webp"
-                      alt="Card image cap profesora de violin" width="432px">
+                      alt="Card image cap profesora de violin" loading="lazy" width="432px">
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su calidez y experiencia, ayuda a sus estudiantes a descubrir todo
@@ -201,7 +201,7 @@
                   </div>
                   <div class="col-lg-12 col-sm-6">
                     <img class="card-img-top mb-3" src="assets/img/profesores/s3.webp"
-                      alt="Card image cap profesora de canto" width="432px">
+                      alt="Card image cap profesora de canto" loading="lazy" width="432px">
                   </div>
                   <div class="col-lg-12 col-sm-12 mb-3">
                     <p class="card-text">Con su gracia y amabilidad, despierta la pasión por la música en sus
@@ -260,7 +260,6 @@
     crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
   <script src="assets/js/toogle.js"></script>
-  <script src="assets/js/cookies.js"></script>
   <script src="assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
