quito defer en js

--- a/pages/violin.html
+++ b/pages/violin.html
@@ -172,9 +172,9 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <!-- SCRIPTS JS -->
-  <script defer src="assets/js/toogle.js"></script>
-  <script defer src="assets/js/cookies.js"></script>
-  <script defer src="assets/js/lazyload.js"></script>
+  <script src="assets/js/toogle.js"></script>
+  <script src="assets/js/cookies.js"></script>
+  <script src="assets/js/lazyload.js"></script>
   <!-- FIN BODY -->
 </body>
 
