--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -167,7 +167,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <h4 id="copyright">&copy; 2024 <strong>MusicArte</strong></h4>
+    <p id="copyright">&copy; 2024 <strong>MusicArte</strong></p>
     <div id="redes">
       <ul>
         <li>
