--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -89,6 +89,7 @@
 
       <!-- SECCION 3 -->
       <div class="section3 fade-in">
+        <h3>Formulario</h3>
         <form action="/enviar.php" method="POST">
           <label for="name">Nombre</label>
           <input
@@ -167,7 +168,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p id="copyright">&copy; 2024 <strong>MusicArte</strong></p>
+    <h4 id="copyright">&copy; 2024 <strong>MusicArte</strong></h4>
     <div id="redes">
       <ul>
         <li>
