cambio en textos 'personalizadas' por 'adaptadas'

--- a/pages/canto.html
+++ b/pages/canto.html
@@ -102,7 +102,7 @@
         <section class="section1">
           <h1 class="fade-in fade1">Aprende<br>Canto</h1>
           <p class="fade-in fade2">
-            Nuestras clases son <em>personalizadas e individuales</em>, garantizando mayor atención
+            Nuestras clases son <em>adaptadas e individuales</em>, garantizando mayor atención
             y progreso.
           </p>
           <div class="imagen1">
