--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- HEADER -->
   <header>
     <!-- MENU NAVEGACION BOOTSTRAP -->
-    <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark" role="navigation">
       <div class="container-fluid">
         <a class="navbar-brand logo" href="#" aria-label="Abrir enlace a inicio">MusicArte</a>
         <label class="navbar-brand logo-2"><a href="#" aria-label="Abrir enlace a inicio">♪</a></label>
