--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,7 +40,7 @@
   <!-- HEADER -->
 <header>
       <!-- MENU NAVEGACION BOOTSTRAP -->
-    <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark" role="navigation">
       <div class="container-fluid">
         <a class="navbar-brand logo" href="../index.html" aria-label="Abrir enlace a inicio">MusicArte</a>
         <label class="navbar-brand logo-2"><a href="../index.html" aria-label="Abrir enlace a inicio">♪</a></label>
@@ -90,7 +90,7 @@
       <!-- SECCION 3 -->
       <div class="section3 fade-in">
         <h3>Formulario</h3>
-        <form action="/enviar.php" method="POST">
+        <form action="/enviar.php" method="POST" role="form">
           <label for="name">Nombre</label>
           <input
             type="text"
