--- a/pages/violin.html
+++ b/pages/violin.html
@@ -43,7 +43,7 @@
   <!-- HEADER -->
 <header>
       <!-- MENU NAVEGACION BOOTSTRAP -->
-    <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark" role="navigation">
       <div class="container-fluid">
         <a class="navbar-brand logo" href="../index.html" aria-label="Abrir enlace a inicio">MusicArte</a>
         <label class="navbar-brand logo-2"><a href="../index.html" aria-label="Abrir enlace a inicio">♪</a></label>
